--- a/.drone.yml
+++ b/.drone.yml
@@ -7,5 +7,5 @@ steps:
   - name: send telegram notification
     image: appleboy/drone-telegram
     settings:
-      token: 934501665:AAGWoM4bf3v0ziOqsf_crywcrr1x6HXxCFk
-      to: 96856885
+      token: ${TELEGRAM_TOKEN}
+      to: ${TELEGRAM_CLIENT}
