--- a/.drone.yml
+++ b/.drone.yml
@@ -18,3 +18,6 @@ steps:
         from_secret: TELEGRAM_TOKEN
       to:
         from_secret: TELEGRAM_CLIENT
+    when:
+      status: [ success, failure ]
+      event: [ push, tag, deployment, pull_request ]
