--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ steps:
       password:
         from_secret: DOCKER_REGISTRY_TOKEN
       tags:
-        - latest
+        - ${DRONE_TAG}
   - name: send telegram notification
     image: appleboy/drone-telegram
     settings:
