--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
     commands:
       - echo "The current branch is ${DRONE_BRANCH}"
       - echo "The current commit hash is ${DRONE_COMMIT_SHA}"
-      - echo "The image tag is ${DRONE_BRANCH//\//-}-${DRONE_COMMIT_SHA:0:8}"
+      - echo "The image tag is ${DRONE_TAG}"
 #   - name: docker
 #     image: plugins/docker
 #     settings:
