--- a/.drone.yml
+++ b/.drone.yml
@@ -18,16 +18,12 @@ steps:
 #         from_secret: DOCKER_REGISTRY_TOKEN
 #       tags:
 #         - ${DRONE_TAG}
-  - name: set version
-    image: alpine
-    commands:
-      - echo "${DRONE_TAG}" > src/version
   - name: publish
     image: plugins/github-release
     settings:
       api_key:
         from_secret: GITHUB_API_KEY
-      files: src/*
+      title: 1.0.0
     when:
       event: tag
   - name: send telegram notification
