--- a/.drone.yml
+++ b/.drone.yml
@@ -6,46 +6,36 @@ steps:
   - name: Check that version file has been updated
     image: curlimages/curl
     commands:
-      - env
       - sh auto_create_tag.sh
 trigger:
   branch:
   - master
 
-#   - name: docker
-#     image: plugins/docker
-#     settings:
-#       repo: andrchalov/docker-ci-test
-#       username: andrchalov
-#       password:
-#         from_secret: DOCKER_REGISTRY_TOKEN
-#       tags:
-#         - ${DRONE_TAG}
-#
-# steps:
-#   - name: set env
-#     image: alpine
-#     commands:
-#       - echo VERSION=`cat version` > .env
-#   - name: docker-tag
-#     image: debian:stable-slim
-#     commands:
-#       - echo "The current branch is ${VERSION}"
-#   - name: publish
-#     image: plugins/github-release
-#     settings:
-#       api_key:
-#         from_secret: GITHUB_API_KEY
-#   - name: send telegram notification
-#     image: appleboy/drone-telegram
-#     settings:
-#       token:
-#         from_secret: TELEGRAM_TOKEN
-#       to:
-#         from_secret: TELEGRAM_CLIENT
-#     when:
-#       status: [ success, failure ]
-#       event: [ push, tag, deployment, pull_request ]
-# trigger:
-#   event:
-#   - tag
+steps:
+  - name: build docker imagee
+    image: plugins/docker
+    settings:
+      repo: andrchalov/docker-ci-test
+      username: andrchalov
+      password:
+        from_secret: DOCKER_REGISTRY_TOKEN
+      tags:
+        - ${DRONE_TAG}
+  - name: publish release
+    image: plugins/github-release
+    settings:
+      api_key:
+        from_secret: GITHUB_API_KEY
+  - name: send telegram notification
+    image: appleboy/drone-telegram
+    settings:
+      token:
+        from_secret: TELEGRAM_TOKEN
+      to:
+        from_secret: TELEGRAM_CLIENT
+    when:
+      status: [ success, failure ]
+      event: [ push, tag, deployment, pull_request ]
+trigger:
+  event:
+  - tag
