--- a/.drone.yml
+++ b/.drone.yml
@@ -6,8 +6,8 @@ steps:
   - name: Check that version file has been updated
     image: curlimages/curl
     commands:
-      - env
-      - sh auto_create_tag.sh
+      - echo ${GITHUB_API_KEY}
+      # - sh auto_create_tag.sh
 trigger:
   branch:
   - master
