--- a/.drone.yml
+++ b/.drone.yml
@@ -6,8 +6,10 @@ steps:
   - name: Check that version file has been updated
     image: curlimages/curl
     commands:
-      - echo ${GITHUB_API_KEY}
-      # - sh auto_create_tag.sh
+      - sh auto_create_tag.sh
+    environment:
+      GITHUB_API_KEY:
+        from_secret: GITHUB_API_KEY
 trigger:
   branch:
   - master
